refactor: 일급 컬렉션에 방어적 복사 적용